sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
while (
	for (j <- 0 to getNombreValeurs()-2) {
		i+1>=i 
	} ) {
		for (i <- 0 to (getNombreValeurs()-2)) {
		if (plusPetit(i+1, i)) {
			echange(i, i+1) }
	}
}
}